                     CHANGES version 5.27.0

           This file summarizes changes made since 5.0

Version 5.27.0

Important: The SSL "version: auto" now defaults to TLSv1.2 and TLSv1.3 only. If you need to enable TLSv1.0 or
TLSv1.1 (regardless of how insecure it is), you have to explicitly enable it via the SSL option, example:
     set ssl {
        version: tlsv11
     }

New: Add support for monitoring of filedescriptors usage of a process on Linux. Thanks to Marcel Baur and Lutz Mader. Example:
    check process myproc with pidfile /var/run/myproc.pid
        if filedescriptors >= 90% then alert
        if filedescriptors >= 99% then restart
        if total filedescriptors > 5000 then alert

New: Add support for monitoring of system-wide filedescriptors usage on Linux. Example:
    check system $HOST
        if filedescriptors >= 90% then alert

New: Allow to set a list of allowed TLS protocols (originally only one was allowed). Also add support for
protocol exclude list (put "-" in front of the protocol name to disable it).
Exclude list example:
     set ssl {
        version: auto -sslv2 -sslv3 -tlsv1 -tlsv11
     }

New: Add support for split certificate chain and key for the monit HTTP interface. Thanks to Lutz Mader for patch. Example:
 set httpd
     port 2812
     with ssl {
        pemchain: /etc/ssl/certs/monit.chain.pem
        pemkey: /etc/ssl/certs/monit.key.pem
     }
     allow myuser:mypassword

New: Issue #877: Add support for VxFS filesystem statistics. Thanks to Lutz Mader for patch.

New: Monit now uses MemAvailable on Linux when calculating the memory usage, so it will provide more accurate
statistics. Thanks to Joe LeVeque for patch.

New: Enable support for compilation with AddressSanitizer. Use "configure --with-asan" to enable.

Fixed: Issue #880: If monit is linked with AddresSanitizer, it may crash when it generates an MD5 hash.
Thanks to Lutz Mader for patch.
