@@ -4,8 +4,9 @@
 
 Version 5.27.0
 
-Important: The SSL "version: auto" now defaults to TLSv1.2 and TLSv1.3 only. If you need to enable TLSv1.0 or
-TLSv1.1 (regardless of how insecure it is), you have to explicitly enable it via the SSL option, example:
+Important: (Backward compatibility impact) The SSL "version: auto" now defaults to TLSv1.2 and TLSv1.3 only.
+If you need to enable TLSv1.0 or TLSv1.1 (regardless of how insecure it is), you have to explicitly enable it
+via the SSL option, example:
      set ssl {
         version: tlsv11
      }
@@ -50,6 +51,10 @@ Fixed: Issue #879: The HTML interface didn't escape strings that are part of mon
 Thanks to Hanno Boeck for report.
 
 Fixed: Issue #872: Procmatch PID column show five digits only
+
+Fixed: Issue #851: Linux and AIX: The length of the string that describes the process name and its arguments
+was limited to 4kB, so the "procmatch" may not find the process if the pattern is past this limit. The limit
+was removed on Linux. On AIX the limit was rised to 8kB.
 
 Fixed: MacOS: Only first 16 characters of the process name was displayed for privileged processes,
 so the pattern based process check and the procmatch CLI may miss some processes.
